@@ -335,6 +335,13 @@ If no frame version of a given box exists, the behavior of this function
 is undefined and some random box or frame is returned.
 See also: <A HREF="drawing.html#fl_frame">fl_frame drawing</A>.
 
+<H4><A name="fl_box">Fl_Boxtype fl_box(Fl_Boxtype)</A></H4>
+
+<P><tt>fl_box</tt> returns the filled version of a frame.
+If no filled version of a given frame exists, the behavior of this function
+is undefined and some random box or frame is returned.
+See also: <TT><A HREF="#fl_frame">fl_frame</A></TT>.
+
 <H4>Adding Your Box Type</H4>
 
 <P>The <TT>Fl::set_boxtype()</TT> method adds or replaces the
