@@ -3,6 +3,7 @@ CHANGES IN FLTK 1.1.8
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644)
+	- Improved fl_down, fl_frame, added fl_box (STR #1678)
 	- Fixed selection of submenu items in 
 	  input_choice (STR #1676)
 	- Fixed calculation of stride for image scaling and
